objects/Open_Search__x.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <externalDeveloperName>Author</externalDeveloperName>
        <label>Author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <externalDeveloperName>Date</externalDeveloperName>
        <label>Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <externalDeveloperName>Expiration date</externalDeveloperName>
        <label>Expiration date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <externalDeveloperName>Summary</externalDeveloperName>
        <label>Summary</label>
        <length>500</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <externalDeveloperName>Test</externalDeveloperName>
        <label>Test</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <externalDataSource>Open_Search</externalDataSource>
    <externalName>Open Search</externalName>
    <label>Open Search</label>
    <pluralLabel>Open Search</pluralLabel>
</CustomObject>